--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>Code Academy Students</title>
   </head>
   <body>
     <h1> Power Code Academy Students</h1>
 
-    <div class="devloper">
+    <div class="developer">
       <h2>Darren DCosta</h2>
       <img src= "img/DarrenDCosta.jpg" height="100" width="100">
-      <p>Favorite Website:
+      <p class="favorite-Website">
+      Favorie Website:
         <a href="https://google.com/"
         target="_blank"
         title="favorite website">Google
@@ -17,10 +19,11 @@
       </p>
     </div>
 
-    <div class="devloper">
+    <div class="developer">
       <h2>Ezz Abousaif</h2>
       <img src="img/EzzAbousaif.jpg" height="100" width="100">
-      <p>Favorite Website:
+      <p class="favorite-Website">
+      Favorite Website:
        <a href="https://genius.com/"
        target="_blank"
        title="favorite website">rapgenius
@@ -28,10 +31,10 @@
    </p>
     </div>
 
-    <div class="devloper">
+    <div class="developer">
       <h2>Leila Weiss</h2>
       <img src= "img/LeilaWeiss.jpg" height="100" width="100">
-      <p class="favorite_Website">
+      <p class="favorite-Website">
       Favorite Website:
         <a href="https://www.pinterest.com/"
          target="_blank"
@@ -40,10 +43,10 @@
      </p>
     </div>
 
-    <div class="devloper">
+    <div class="developer">
       <h2>Kevin Skilton</h2>
       <img src= "img/KevinSkilton.jpg" height="100" width="100">
-      <p class="favorite_Website">
+      <p class="favorite-Website">
       Favorite Website:
         <a href="http://www.bomb.com/"
         target="_blank"
@@ -52,10 +55,10 @@
     </p>
     </div>
 
-    <div class="devloper">
+    <div class="developer">
       <h2>Kyle Fadigan</h2>
       <img src= "img/KyleFadigan.jpg" height="100" width="100">
-      <p class="favorite_Website">
+      <p class="favorite-Website">
       Favorite Website:
         <a href="https://www.discgolfscene.com/"
         target="_blank"
@@ -64,10 +67,10 @@
     </p>
     </div>
 
-    <div class="devloper">
+    <div class="developer">
       <h2>George Barthel</h2>
       <img src= "img/GeorgeBarthel.jpg" height="100" width="100">
-      <p class="favorite_Website">
+      <p class="favorite-Website">
       Favorite Website:
         <a href="https://www.reddit.com/"
         target="_blank"
