--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       Favorite Website:
         <a href="https://www.discgolfscene.com/"
         target="_blank"
-        title="favorite website">discgolfscene
+        title="favorite website">discgolf
       </a>
     </p>
     </div>
@@ -78,5 +78,34 @@
       </a>
     </p>
     </div>
+
+<br></br>
+
+    <div class="food">
+      <h3>Ezzeldin's Favorite Food</h3>
+      <ol>
+        <li>Sushi</li>
+        <li>Pho</li>
+        <li>Tacos</li>
+      </ol>
+    </div>
+
+<br></br>
+
+    <div class="food">
+      <h3>Kevin's Favorite Food</h3>
+      <ol>
+        <li>Tex Mex</li>
+        <li>Poutine</li>
+        <li>Sour Patch Kids</li>
+      </ol>
+    </div>
+
+        <br></br>
+
+    <div class="food-image">
+      <a href="http://www.loscamaradas.com/"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/73/001_Tacos_de_carnitas%2C_carne_asada_y_al_pastor.jpg/2560px-001_Tacos_de_carnitas%2C_carne_asada_y_al_pastor.jpg" height="200" width="300"></a>
+    </div>
+
   </body>
 </html>
